--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-requests==2.32.3
-beautifulsoup4==4.13.3
-pyfiglet==1.0.2
-tqdm==4.67.1
-colorama==0.4.6
+requests
+beautifulsoup4
+pyfiglet
+tqdm
+colorama
